--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,5 +14,5 @@ tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
-[dependencies.core]
-path = "../core"
+[dependencies.common]
+path = "../common"
