fix: manifest typo - chrono feature wasn't enabled for tokio-postgres

--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -16,4 +16,4 @@ features = ["serde"]
 
 [dependencies.tokio-postgres]
 version = "0.7.7"
-fetures = ["with-chrono-0_4"]
+features = ["with-chrono-0_4"]
