--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 axum = "0.6.1"
+bb8 = "0.8"
+bb8-postgres = "0.8.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
