--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 anyhow = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tokio = { version = "1.0", features = ["rt-multi-thread", "time", "macros"] }
+tracing = "0.1"
 
 [dependencies.chrono]
 version = "0.4.23"
